Updated the scrollbar Styling for newer browser versions. Fixed a bug where opening the main app through foundry's module settings would not properly increment the date and time. Fixed some issues with unit tests around the current year being a leap year. Updated dependencies.

--- a/src/styles/themes/forbidden-lands.scss
+++ b/src/styles/themes/forbidden-lands.scss
@@ -58,7 +58,7 @@ $theme: (
   // Scrollbar Coloring
         scrollbar-background-color: #999,
         scrollbar-border-color: #333,
-        scrollbar-track-bg-color: unset,
+        scrollbar-track-bg-color: transparent,
         scrollbar-track-border: unset,
         scrollbar-button-height: 0,
         scrollbar-button-bg-color: unset,
