--- a/src/styles/themes/sfrpg.scss
+++ b/src/styles/themes/sfrpg.scss
@@ -58,7 +58,7 @@ $theme: (
   // Scrollbar Coloring
         scrollbar-background-color: #782e22,
         scrollbar-border-color: var(--color-border-highlight),
-        scrollbar-track-bg-color: unset,
+        scrollbar-track-bg-color: transparent,
         scrollbar-track-border: 1px solid #999,
         scrollbar-button-height: 0,
         scrollbar-button-bg-color: unset,
